[workspace]
resolver = "2"
members = [
	"grpc",
	"server",
	"contract-interface",
	"storage",
	"chain-state",
	"utils",
	"client",
	"da-miner",
	"chain-utils"]

[workspace.dependencies]
grpc = { path = "./grpc" } 
server = { path = "./server" } 
contract-interface = { path = "./contract-interface" }
chain-state = { path = "./chain-state" }
storage = { path = "./storage" }
utils = { path = "./utils" }
client = { paht = "./client" }
chain-utils = { path = "./chain-utils"}
da-miner = { path = "./da-miner" }

zg-encoder = { git = "https://github.com/0glabs/0g-da-encoder.git", rev = "95593e1f439e8c00d3b6ffc0a4ab9f6d516c7f94", features = ["parallel"]}
# zg-encoder = { path = "../0g-da-encoder/crates/encoder", features = ["parallel"]}
task_executor = { git = "https://github.com/0glabs/0g-storage-node.git", rev = "ef82f643932ad0a2ec28acce47913df187afb77d" }


[profile.release]
panic = 'abort'
