[workspace]
resolver = "2"
members = [
	"grpc",
	"server",
	"contract-interface",
	"storage",
	"chain-state",
	"utils",
	"client",
	"da-miner",
	"chain-utils",
	"key-gen",
	"pruner"
]

[workspace.dependencies]
grpc = { path = "./grpc" } 
server = { path = "./server" } 
contract-interface = { path = "./contract-interface" }
chain-state = { path = "./chain-state" }
storage = { path = "./storage" }
utils = { path = "./utils" }
client = { paht = "./client" }
chain-utils = { path = "./chain-utils"}
da-miner = { path = "./da-miner" }
pruner = { path = "./pruner" }

zg-encoder = { git = "https://github.com/0glabs/0g-da-encoder.git", rev = "6d5bac1", features = ["parallel"]}
# zg-encoder = { path = "../0g-da-encoder/crates/encoder", features = ["parallel"]}
task_executor = { git = "https://github.com/0glabs/0g-storage-node.git", rev = "ef82f643932ad0a2ec28acce47913df187afb77d" }


[profile.release]
panic = 'abort'
