[package]
name = "da-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
tracing = "0.1.37"
ethers = "2.0.4"
task_executor = { workspace = true }

chain-utils = { workspace = true }
contract-interface = { workspace = true }
storage = { workspace = true }
zg-encoder = { workspace = true }

config = "0.13"
once_cell = "1.19"

tiny-keccak = "2.0"