[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tonic = "0.11.0"
tracing = "0.1.40"
once_cell = "1.19.0"

[build-dependencies]
tonic-build = { version="0.11.0", features = ["prost"] }
