[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.71"
prost = "0.12.3"
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
once_cell = "1.19.0"
storage = { workspace = true }
utils = { workspace = true }
chain-state = { workspace = true }
zg-encoder = { workspace = true }
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
tokio = { version = "1.28.1", features = ["full"] }
ethers = { version = "2.0.4", features = ["ws", "rustls", "openssl"] }
num-bigint = { version = "0.4", default-features = false }
hex = "0.4"
rayon = "1.10.0"

[build-dependencies]
tonic-build = { version="0.11.0", features = ["prost"] }
