[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["cargo"] }
config = "0.13.3"
tokio = { version = "1.28.1", features = ["full"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
grpc = { path = "../grpc" }