[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["cargo"] }
config = "0.13.3"
ethers = { version = "2.0.4", features = ["ws", "rustls", "openssl"] }
tokio = { version = "1.28.1", features = ["full"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
storage = { workspace = true }
grpc = { workspace = true }
pruner = { workspace = true }
chain-state = { workspace = true }
chain-utils = { workspace = true }
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
num-bigint = { version = "0.4", default-features = false }
rayon = "1.10.0"

task_executor = { workspace = true }
futures = "0.3.21"
exit-future = "0.2.0"
da-miner = { workspace = true }