[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
kvdb-rocksdb = "0.19.0"
async-trait = "0.1.71"
zg-encoder = { git = "https://github.com/0glabs/0g-da-encoder.git", branch = "signer-fix" }
bincode = "1.3.3"
serde = "1.0.163"
serde_json = "1.0.96"
ark-serialize = "0.4"